--- a/timer/package.json
+++ b/timer/package.json
@@ -14,7 +14,10 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
-    "react-native-web": "~0.18.7"
+    "react-native-circular-progress": "^1.3.7",
+    "react-native-svg": "12.3.0",
+    "react-native-web": "~0.18.7",
+    "@expo/vector-icons": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
